[gd_scene load_steps=7 format=3 uid="uid://cym0qu4doia7l"]

[ext_resource type="Texture2D" uid="uid://cjlu668hn00g7" path="res://assets/cool-background.png" id="1_j5tuv"]
[ext_resource type="Script" path="res://scripts/MenuInterface.gd" id="2_53dm5"]
[ext_resource type="Texture2D" uid="uid://c3scer7rhv1wq" path="res://assets/logo.png" id="2_bc00d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fivr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_mfwcm"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_3fivr")

[sub_resource type="Theme" id="Theme_1bcun"]
Button/font_sizes/font_size = 30

[node name="MainMenu" type="Node2D"]

[node name="Cool-background" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(593, 323)
scale = Vector2(1.12, 1.12)
texture = ExtResource("1_j5tuv")

[node name="MenuInterface" type="CanvasLayer" parent="."]
script = ExtResource("2_53dm5")

[node name="PanelContainer" type="PanelContainer" parent="MenuInterface"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 413.0
offset_top = 370.0
offset_right = -413.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_mfwcm")

[node name="MarginContainer" type="MarginContainer" parent="MenuInterface/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface/PanelContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_1bcun")
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="MenuInterface/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="StatsButton" type="Button" parent="MenuInterface/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="QuitButton" type="Button" parent="MenuInterface/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(615, 231)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_bc00d")

[connection signal="pressed" from="MenuInterface/PanelContainer/MarginContainer/VBoxContainer/StartButton" to="MenuInterface" method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuInterface/PanelContainer/MarginContainer/VBoxContainer/StatsButton" to="MenuInterface" method="_on_stats_button_pressed"]
[connection signal="pressed" from="MenuInterface/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="MenuInterface" method="_on_quit_button_pressed"]
